--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.address=localhost
 server.port=8080
-spring.datasource.url=jdbc:mysql://192.168.10.13:3306/coffeemukka_boot?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/coffeemukka_boot?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,3 +21,9 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.security.user.name = zeroco
+spring.security.user.password = zerocopw
+spring.seucrity.user.roles = USER, ADMIN
+#token secret key
+jwt.token.key=abcdefghijklm;
